# upgrade_tool

./: CMakeLists.txt  CRC.cpp  DefineHeader.h  MD5Checksum.cpp  MD5Checksum.h  MD5ChecksumDefines.h  README.md  RKAndroidDevice.cpp  RKAndroidDevice.h  RKBoot.cpp  RKBoot.h  RKDevice.cpp  RKDevice.h  RKImage.cpp  RKImage.h  RKLog.cpp  RKLog.h  RKUpgrade.cpp  RKUpgrade.h  gpt.h  main.cpp
.github/workflows/: ci.yml
cmake/: toolchain-aarch64.cmake
os/linux/: RKComm.cpp  RKDisk.cpp  RKDisk.h  RKScan.cpp  RKScan.h  platform.h  shared_mutex.cpp  shared_mutex.h
os/mac/: RKComm.cpp  RKComm.h  platform.cpp  platform.h  shared_mutex.cpp  shared_mutex.h
os/win/: RKComm.cpp  RKComm.h  RKDisk.cpp  RKDisk.h  RKScan.cpp  RKScan.h  platform.cpp  platform.h  shared_mutex.cpp  shared_mutex.h
scripts/: package-deb.sh
